--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 				<meta charset="UTF-8">
 				<title>W E B Developer : Home</title>
-				<link rel="stylesheet" href="css/styles.css"></link>
-				<script src="js/jquery-3.4.1.min.js"></script>
+				<link rel="stylesheet" href="styles.css"></link>
+	
 </head>
 <body>
 				<header>
@@ -33,13 +33,13 @@
 										<h3 class="m-t-small m-b-small">to my personal portfolio</h3>
 										<h4 class="m-t-small m-b-small">my name is Andrés Machado</h4>
 										<h5 class="m-t-small m-b-small">Jr web developer</h5>
-										<a href="#pr"><img class="m-t m-b" src="img/down-arrow-download-svgrepo-com.svg" alt="down-download"></img></a>
+										<a href="#pr"><img class="m-t m-b" src="down-arrow-download-svgrepo-com.svg" alt="down-download"></img></a>
 						</div>
 				</div>
 				<div class="layout fila flex-center">
 								<span id="pr">&nbsp;</span>
 												<div class="col-25">
-																<img src="img/html-svgrepo-com.svg" alt="icon-html"></img>
+																<img src="html-svgrepo-com.svg" alt="icon-html"></img>
 								</div>	
 								<div class="col-75">
 																<p>
@@ -49,7 +49,7 @@ I have a high knowledge in HTML5.
 				</div>	
 				<div class="layout fila flex-center">
 								<div class="col-25">
-																<img src="img/css-svgrepo-com.svg" alt="icon-css"></img>
+																<img src="css-svgrepo-com.svg" alt="icon-css"></img>
 																</div>
 								<div class="col-75">
 																<p>
@@ -58,7 +58,7 @@ I am proficient in advanced CSS concepts, and my performance is very good.</p>
 				</div>							
 					<div class="layout fila flex-center">
 								<div class="col-25">
-																<img src="img/js-svgrepo-com.svg" alt="icon-js"></img>
+																<img src="js-svgrepo-com.svg" alt="icon-js"></img>
 																</div>
 								<div class="col-75">
 																<p>
@@ -68,11 +68,11 @@ I still need to master the Javascript language. I lack experience</p>
 				<footer class="fila">
 								<div class="col-100">
 												<p class="m-b flex-center">
-																<img class="m-r-small" src="img/whatsapp-svgrepo-com.svg" alt="icon-whatsapp"></img>
+																<img class="m-r-small" src="whatsapp-svgrepo-com.svg" alt="icon-whatsapp"></img>
 																+598 99 835 928
 												</p>
 												<p class="flex-center">
-																<img class="m-r-small" src="img/gmail-svgrepo-com.svg" alt="icon-gmail"></img>
+																<img class="m-r-small" src="gmail-svgrepo-com.svg" alt="icon-gmail"></img>
 																<a href="mailto: andresmachadoariochangel@gmail.com">Contact</a>
 												</p>
 								</div>
