--- a/About-me.html
+++ b/About-me.html
@@ -3,7 +3,7 @@
 <head>
 				<meta charset="UTF-8">
 				<title>W E B Developer : About-me</title>
-				<link rel="stylesheet" href="css/styles.css"></link>
+				<link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
 					<header>
@@ -28,11 +28,11 @@
 				</div>
 				<div class="card fila flex-center">
 								<div class="col-25">
-													<img src="img/IMG-20220825-WA0004.jpg" alt="image-profile"></img>
+													<img src="IMG-20220825-WA0004.jpg" alt="image-profile"></img>
 								</div>
 								<div class="col-75">
 												<h4>About Me</h4>
-												<h5 class="m-t">Nationality:<img src="img/uruguay-svgrepo-com.svg" alt="icon-flang"></img></h5>
+												<h5 class="m-t">Nationality:<img src="uruguay-svgrepo-com.svg" alt="icon-flang"></img></h5>
 												<br>
 												<p>
 I am a jr front-end developer, I aim to learn all front-end web technology and master them. I am responsible and I always promise to finish what I set out to do.</p>
@@ -43,15 +43,15 @@ I am a jr front-end developer, I aim to learn all front-end web technology and m
 						<footer class="fila m-t f-about">
 								<div class="col-100">
 												<p class="m-b flex-center">
-																<img class="m-r-small" src="img/whatsapp-svgrepo-com.svg" alt="icon-whatsapp"></img>
+																<img class="m-r-small" src="whatsapp-svgrepo-com.svg" alt="icon-whatsapp"></img>
 																+598 99 835 928
 												</p>
 												<p class="flex-center">
-																<img class="m-r-small" src="img/gmail-svgrepo-com.svg" alt="icon-gmail"></img>
+																<img class="m-r-small" src="gmail-svgrepo-com.svg" alt="icon-gmail"></img>
 																<a href="mailto: andresmachadoariochangel@gmail.com">Contact</a>
 												</p>
 								</div>
 				</footer>							
-				<script src="js/main.js"></script>
+				<script src="main.js"></script>
 </body>
 </html>
