--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@ I still need to master the Javascript language. I lack experience</p>
 												</p>
 								</div>
 				</footer>							
-				<script src="js/main.js"></script>
+				<script src="main.js"></script>
 </body>
 </html>
