--- a/About-me.html
+++ b/About-me.html
@@ -28,7 +28,7 @@
 				</div>
 				<div class="card fila flex-center">
 								<div class="col-25">
-													<img src="img/IMG-20220825-WA0004.jpg" alt="image-profile"></img>
+													<img src="IMG-20220825-WA0004.jpg" alt="image-profile"></img>
 								</div>
 								<div class="col-75">
 												<h4>About Me</h4>
