--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<div class="hero-content flex-column-center"	>
 										<h2 class="m-b-small">Welcome</h2>
 										<h3 class="m-t-small m-b-small">to my personal portfolio</h3>
-										<h4 class="m-t-small m-b-small">my name is Angdrés Machado</h4>
+										<h4 class="m-t-small m-b-small">my name is Andrés Machado</h4>
 										<h5 class="m-t-small m-b-small">Jr web developer</h5>
 										<a href="#pr"><img class="m-t m-b" src="down-arrow-download-svgrepo-com.svg" alt="down-download"></img></a>
 						</div>
