--- a/About-me.html
+++ b/About-me.html
@@ -26,6 +26,7 @@
 												<hr>
 								</ul>
 				</div>
+                               <div class="content-about">
 				<div class="card fila flex-center">
 								<div class="col-25">
 													<img src="IMG-20220825-WA0004.jpg" alt="image-profile"></img>
@@ -40,6 +41,7 @@ I am a jr front-end developer, I aim to learn all front-end web technology and m
                <p>My goal as a Freelancer is to be able to fulfill the projects. Demonstrate that I am someone with the ability to work in what I like.</p>
 								</div>
 				</div>
+                             </div>
 						<footer class="fila m-t f-about">
 								<div class="col-100">
 												<p class="m-b flex-center">
