--- a/About-me.html
+++ b/About-me.html
@@ -26,19 +26,21 @@
 												<hr>
 								</ul>
 				</div>
+				<div class="content-about">
 				<div class="card fila flex-center">
 								<div class="col-25">
 													<img src="IMG-20220825-WA0004.jpg" alt="image-profile"></img>
 								</div>
 								<div class="col-75">
 												<h4>About Me</h4>
-												<h5 class="m-t">Nationality:<img clases="uru" src="uruguay-svgrepo-com.svg" alt="icon-flang"></img></h5>
+												<h5 class="m-t">Nationality:<img src="uruguay-svgrepo-com.svg" alt="icon-flang"></img></h5>
 												<br>
 												<p>
 I am a jr front-end developer, I aim to learn all front-end web technology and master them. I am responsible and I always promise to finish what I set out to do.</p>
                <br>
                <p>My goal as a Freelancer is to be able to fulfill the projects. Demonstrate that I am someone with the ability to work in what I like.</p>
 								</div>
+				</div>
 				</div>
 						<footer class="fila m-t f-about">
 								<div class="col-100">
