--- a/About-me.html
+++ b/About-me.html
@@ -33,7 +33,7 @@
 								</div>
 								<div class="col-75">
 												<h4>About Me</h4>
-												<h5 class="m-t">Nationality:<img src="uruguay-svgrepo-com.svg" alt="icon-flang"></img></h5>
+												<h5 class="m-t">Nationality:<img class="uru" src="uruguay-svgrepo-com.svg" alt="icon-flang"></img></h5>
 												<br>
 												<p>
 I am a jr front-end developer, I aim to learn all front-end web technology and master them. I am responsible and I always promise to finish what I set out to do.</p>
